# CovidPrognosis

./: .gitignore  pyproject.toml
configs/: data.yaml
covidprognosis/data/: __init__.py  ranzcr.py
covidprognosis/plmodules/: xray_datamodule.py
cp_examples/sip_finetune/: sip_finetune.py  train_sip.py
