[tool.poetry]
name = "covidprognosis"
version = "0.1.0"
description = ""
authors = ["Thomas Aubry <github.thomaub@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pylama = "^7.7.1"
mypy = "^0.800"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
